--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,7 +43,7 @@ body, html {
 #map-section {
     height: 500px;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023.9px) {
     #home-section {
         height: 350px;
         background: url('./assets/images/hero-image.png');
@@ -52,6 +52,9 @@ body, html {
     .home-heading,.home-info  {
         background: var(--F4Gray);
         opacity: 75%;
+    }
+    .bg-lightgreen.show {
+        background:#ffffff;
     }
 }
 @media screen and (max-width: 640px) {
@@ -102,3 +105,76 @@ body, html {
     from {width: 0;}
     to {width: 100%;}
   }
+
+/* Select Input  */
+.customSelect:after {
+    content: '';
+    position: absolute;
+    color: #ffffff;
+    background: var(--F4Green);
+    width: 30px;
+    height: 25px;
+    right: 0px;
+    top: 0px;
+    pointer-events: none;
+}
+.customSelect:before {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    right: 8px;
+    top: 11px;
+    border-top: 6px solid #fff;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    z-index: 1;
+    pointer-events: none;
+}
+/* IE11 hide native button (thanks Matt!) */
+select::-ms-expand {
+    display: none;
+}
+
+.customSelect select {
+    -webkit-appearance: none;   
+    -moz-appearance: none;
+    appearance: none;
+    color: #606060;
+    display: block;
+    width: 100%;
+    background-color: white;
+    padding-left: 10px;
+    border: none;
+    -ms-word-break: normal;
+    word-break: normal;
+    outline: none;
+}
+
+/* Radio Buttons  */
+
+input[type="radio"] + label span {
+    transition: background .2s,
+      transform .2s;
+}
+
+input[type="radio"] + label span:hover,
+input[type="radio"] + label:hover span{
+  transform: scale(1.2);
+} 
+
+input[type="radio"]:checked + label span {
+  background-color: var(--F4Green);
+  box-shadow: 0px 0px 0px 2px white inset;
+}
+
+/* Slider  */
+input[type=range]::-webkit-slider-thumb {
+	pointer-events: all;
+	width: 24px;
+	height: 24px;
+	-webkit-appearance: none;
+  
+/* @apply w-6 h-6 appearance-none pointer-events-auto; */
+}
