--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,6 +43,11 @@ body, html {
 #map-section {
     height: 500px;
 }
+#cs-section {
+    height: 500px;
+    background: url('./assets/images/cs-section-bg.png');
+    background-size: 100% 100%;
+}
 @media screen and (max-width: 1023.9px) {
     #home-section {
         height: 350px;
@@ -58,9 +63,8 @@ body, html {
     }
 }
 @media screen and (max-width: 640px) {
-    #home-section {
+    #home-section,#cs-section {
         height: 250px;
-        background: url('./assets/images/hero-image.png');
         background-size: 100% 100%;
     }
 }
@@ -177,4 +181,30 @@ input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
   
 /* @apply w-6 h-6 appearance-none pointer-events-auto; */
+}
+
+.arrow-prev::before {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 8px;
+    left: 2px;
+    border-top: 6px solid transparent;
+    border-left: 6px solid transparent;
+    border-right: 9px solid #fff;
+    border-bottom: 6px solid transparent;
+}
+
+.arrow-next:before {
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 8px;
+    left: 10px;
+    border-top: 6px solid transparent;
+    border-left: 9px solid #fff;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid transparent;
 }
